--- a/src/app/layout/tasks/tasks.component.html
+++ b/src/app/layout/tasks/tasks.component.html
@@ -20,20 +20,25 @@
 
             <!-- Progress Column -->
             <ng-container matColumnDef="progress">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Progress </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Task Name </mat-header-cell>
                 <mat-cell *matCellDef="let row"> {{row.progress}}% </mat-cell>
             </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Site Name </mat-header-cell>
                 <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
             </ng-container>
 
             <!-- Color Column -->
             <ng-container matColumnDef="color">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Color </mat-header-cell>
-                <mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </mat-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Start Time </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.color}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="test">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Assigned To </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.test}} </mat-cell>
             </ng-container>
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
