--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -3,26 +3,50 @@
 
     <hr>
     <div class="row">
-        <div style="cursor: pointer" class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'primary'" [icon]="'fa-tasks'" [count]="tasksInPipe" [label]="'Tasks In pipe'"></app-stat>
+        <div class="col-xl-3 col-lg-6">
+            <a style="cursor: pointer" [routerLink]="['/tasks']">
+                <app-stat [bgClass]="'primary'" [icon]="'fa-tasks'" [count]="tasksInPipe" [label]="'Tasks In pipe'"></app-stat>
+            </a>
         </div>
         <div style="cursor: pointer" class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'warning'" [icon]="'fa-users'" [count]="employeeNumber" [label]="'Employee Number'"></app-stat>
         </div>
-        <div style="cursor: pointer" class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'success'" [icon]="'fa-clock-o'" [count]="taskApproval" [label]="'Task Approval'"></app-stat>
+        <div class="col-xl-3 col-lg-6">
+            <a style="cursor: pointer" [routerLink]="['/tasksapproval']">
+                <app-stat [bgClass]="'success'" [icon]="'fa-clock-o'" [count]="taskApproval" [label]="'Task Approval'"></app-stat>
+            </a>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'danger'" [icon]="'fa-support'" [count]="13" [label]="'New Tickets!'"></app-stat>
+            <a style="cursor: pointer" [routerLink]="['/newtask']">
+                <app-stat [bgClass]="'danger'" [icon]="'fa-support'" [label]="'New Task'"></app-stat>
+            </a>
         </div>
 
     </div>
     <hr>
-    <div class="col-xl-12">
-        <!--<app-maps></app-maps>-->
-        <agm-map class="mapMarker" [latitude]="lat" [longitude]="lng">
-            <agm-marker class="mapMarker" *ngFor="let item of markers" [(latitude)]="item.latt" [(longitude)]="item.longg" [label]="item.empname">
-            </agm-marker>
-        </agm-map>
+    <div class="row">
+        <div class="col col-sm-6">
+            <div class="card mb-3">
+                <div class="card-header">
+                    Task Categories
+                </div>
+                <div class="card-body">
+                    <canvas baseChart height="180px" [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    </canvas>
+                </div>
+            </div>
+        </div>
+        <div class="col col-sm-6">
+            <div class="card mb-3">
+                <div class="card-header">
+                    Alarm Statistics
+                </div>
+                <div class="card-body">
+                    <canvas height="180px" baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    </canvas>
+
+                </div>
+            </div>
+        </div>
     </div>
 </div>
