--- a/src/app/layout/tasksapproval/dialog-overview-example-dialog.html
+++ b/src/app/layout/tasksapproval/dialog-overview-example-dialog.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Hi {{data.name}}</h1>
+<h1 mat-dialog-title>Hi </h1>
 <div class="col-xs-12">
     <p>Site Name: {{data.sitename}}</p>
     <hr>
-    <p>Employee: {{data.employee}} </p>
+    <p>Employee: {{data.username}} </p>
     <mat-form-field>
         <input class="col-xs-12" matInput [(ngModel)]="data.action">
     </mat-form-field>
