--- a/src/app/layout/tasksapproval/dialog-overview-example-dialog.html
+++ b/src/app/layout/tasksapproval/dialog-overview-example-dialog.html
@@ -2,7 +2,7 @@
 <div class="col-xs-12">
     <p>Site Name: {{data.sitename}}</p>
     <hr>
-    <p>Employee: {{data.username}} </p>
+    <p>Employee: {{data.employee}} </p>
     <mat-form-field>
         <input class="col-xs-12" matInput [(ngModel)]="data.action">
     </mat-form-field>
