--- a/src/app/layout/newtask/newtask.component.html
+++ b/src/app/layout/newtask/newtask.component.html
@@ -1,4 +1,6 @@
 <div [@routerTransition]>
+
+
     <div class="row">
         <div class="col col-xs-12">
             <div class="card mb-12">
@@ -50,6 +52,8 @@
 <div class="example-container ">
 
 
-
+    <div class="col-xs-12">
+        <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+    </div>
 
 </div>
