--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,19 +2,19 @@
     <div class="row justify-content-md-center">
         <div class="col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
-            <h1>SB Admin BS4 Angular5</h1>
-            <form role="form">
-                <div class="form-content">
-                    <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
-                    </div>
+            <h1>Umniah Field Force Management</h1>
 
-                    <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
-                    </div>
+            <div class="form-content">
+                <div class="form-group">
+                    <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email" [(ngModel)]="userName">
                 </div>
-                <a class="btn rounded-btn" (click)="onLoggedin()"> Log in </a> &nbsp;
-            </form>
+
+                <div class="form-group">
+                    <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password" [(ngModel)]="password">
+                </div>
+            </div>
+            <a class="btn rounded-btn" (click)="onLoggedin()"> Log in </a> &nbsp;
+
         </div>
     </div>
 </div>
