--- a/src/app/layout/record/record.component.html
+++ b/src/app/layout/record/record.component.html
@@ -68,4 +68,8 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
 <hr>
-<button (click)="eventClicked()">Add Button</button>
+<div class="row">
+    <div class="col-xs-12">
+        <button class="btn btn-success" (click)="eventClicked()">Export To CSV</button>
+    </div>
+</div>
