--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -4,7 +4,7 @@
         <!-- <span class="navbar-toggler-icon"></span> -->
         <i class="fa fa-bars text-muted" aria-hidden="true"></i>
     </button>
-    <div class="collapse navbar-collapse">
+    <!--<div class="collapse navbar-collapse">
 
         <ul class="navbar-nav ml-auto">
 
@@ -111,6 +111,6 @@
                     </a>
                 </div>
             </li>
-        </ul>
-    </div>
+        </ul>-->
+    <!--</div>-->
 </nav>
