--- a/src/app/layout/newtask/newtask.component.html
+++ b/src/app/layout/newtask/newtask.component.html
@@ -11,18 +11,17 @@
 
                     <div class="form-group">
                         <div class="example-container">
-                            <mat-form-field>
-                                <mat-select placeholder="Select Site Name" [(ngModel)]="siteName">
-                                    <mat-option *ngFor="let site of siteList" value="{{site}}">{{site}}</mat-option>
-
-                                </mat-select>
-                            </mat-form-field>
-
-                            <mat-form-field class="col-xs-12">
+                            <ng-select [items]="cities" bindLabel="name" bindValue="name" placeholder="Site Name" [(ngModel)]="siteName">
+                            </ng-select>
+                            <p></p>
+                            <ng-select [items]="tasks" bindLabel="name" bindValue="name" placeholder="Task Name" [(ngModel)]="taskName">
+                            </ng-select>
+                            <p></p>
+                            <!--<mat-form-field class="col-xs-12">
                                 <input matInput placeholder=" Task Name" [(ngModel)]="taskName">
-                            </mat-form-field>
+                            </mat-form-field>-->
 
-                            <mat-form-field>
+                            <!--<mat-form-field>
                                 <mat-select placeholder="Select Task Category" [(ngModel)]="taskCat">
                                     <mat-option value="Power">Power</mat-option>
                                     <mat-option value="2G">2G</mat-option>
@@ -30,21 +29,43 @@
                                     <mat-option value="4G">4G</mat-option>
                                     <mat-option value="MicroWave">MicroWave</mat-option>
                                 </mat-select>
-                            </mat-form-field>
-                            <mat-form-field>
+                            </mat-form-field>-->
+                            <ng-select [items]="taskcat1" bindLabel="name" bindValue="name" placeholder="Task Cat" [(ngModel)]="taskCat">
+                            </ng-select>
+                            <p></p>
+                            <ng-select [items]="taskcat" bindLabel="name" bindValue="name" placeholder="Employee Name" [(ngModel)]="assignedTo">
+                            </ng-select>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+
+                            <button class="btn btn-info btn-sm " (click)="randomize() ">Add Task</button>
+
+                            <!--<mat-form-field>
                                 <mat-select placeholder="Select Employee" [(ngModel)]="assignedTo">
                                     <mat-option *ngFor="let emp of empList" value="{{ emp }}">{{emp}}</mat-option>
 
                                 </mat-select>
-                            </mat-form-field>
+                            </mat-form-field>-->
                         </div>
 
                     </div>
 
                 </div>
-                <div class="card-footer ">
-                    <button class="btn btn-info btn-sm " (click)="randomize() ">New Task</button>
-                </div>
+
             </div>
         </div>
     </div>
@@ -55,5 +76,19 @@
     <div class="col-xs-12">
         <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
     </div>
+</div>
+<hr>
 
+<div class="row">
+    <div class="col col-xs-12">
+        <div class="card xs-12">
+            <div class="card-header">
+                Upload Task CSV
+            </div>
+            <div class="card-body">
+
+                <input type="file" class="btn btn-danger" (change)="changeListener($event.target.files)">
+            </div>
+        </div>
+    </div>
 </div>
