--- a/src/app/layout/tasks/tasks.component.html
+++ b/src/app/layout/tasks/tasks.component.html
@@ -29,6 +29,18 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header> Site Name </mat-header-cell>
             <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
         </ng-container>
+        <ng-container matColumnDef="date">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Task Date </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.date | date}} </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="ack">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Acknowledge Time </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.ack}} </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="isack">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Acknowledged </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.isack}} </mat-cell>
+        </ng-container>
 
         <!-- Color Column -->
         <ng-container matColumnDef="color">
@@ -43,11 +55,9 @@
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 
-        <mat-row *matRowDef="let row; columns: displayedColumns;">
+        <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="OnClickRow(row)" style="cursor: pointer">
         </mat-row>
 
     </mat-table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
-<hr>
-<button (click)="eventClicked()">Add Button</button>
