--- a/src/app/layout/tasks/tasks.component.scss
+++ b/src/app/layout/tasks/tasks.component.scss
@@ -4,6 +4,35 @@
     min-width: 300px;
 }
 
+.formfiledmat {
+    width: 100%
+}
+
+.example-header {
+    min-height: 64px;
+    padding: 8px 24px 0;
+}
+
+.mat-form-field {
+    font-size: 14px;
+    width: 100%;
+}
+
+.mat-table {
+    overflow: auto;
+    max-height: 500px;
+}
+
+.example-container {
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
+}
+
+.formfiledmat {
+    width: 100%
+}
+
 .example-header {
     min-height: 64px;
     padding: 8px 24px 0;
