--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -3,9 +3,22 @@
         <!--<a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard' | translate }}
         </a>-->
+        <a [routerLink]="['/taskconfig']" [routerLinkActive]="['router-link-active']" class="list-group-item" *ngIf="isAdmin">
+            <i class="fa fa-fw fa-tasks"></i>&nbsp;{{ 'New Tasks' | translate }}
+        </a>
+        <a [routerLink]="['/updatetask']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-edit"></i>&nbsp;{{ 'Update Tasks' | translate }}
+        </a>
         <a [routerLink]="['/record']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-database"></i>&nbsp;{{ 'Record' | translate }}
         </a>
+        <a [routerLink]="['/owner']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Owner' | translate }}
+        </a>
+        <a [routerLink]="['/divisions']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-address-book"></i>&nbsp;{{ 'divisions' | translate }}
+        </a>
+
         <!--<a [routerLink]="['/charts']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-bar-chart-o"></i>&nbsp;{{ 'Charts' | translate }}
         </a>-->
