--- a/src/app/layout/record/record.component.html
+++ b/src/app/layout/record/record.component.html
@@ -20,29 +20,40 @@
 
         <!-- Progress Column -->
         <ng-container matColumnDef="progress">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Budget Line </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Task Name </mat-header-cell>
             <mat-cell *matCellDef="let row"> {{row.progress}} </mat-cell>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Reserved Budget </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.name | currency:'JOD'}} </mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Task Description </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.test }} </mat-cell>
         </ng-container>
 
         <!-- Color Column -->
         <ng-container matColumnDef="date">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Associated PRs </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.date }} </mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.name }} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="color">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Returned Budget </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.color | currency:'JOD' }} </mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Due Date </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.color | date: 'dd/MM/yyyy'}} </mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="test">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Original Budget </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.test | currency:'JOD'}} </mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Project Owner </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.date}} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="myprogress">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Progress </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow='90' aria-valuemin="0" aria-valuemax="100" [style.width.%]="row.myprogress">
+                        {{row.myprogress}}%
+                    </div>
+                </div>
+            </mat-cell>
         </ng-container>
         <!--<ng-container matColumnDef="actiontaken">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Action Taken </mat-header-cell>
@@ -66,15 +77,56 @@
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 
-        <mat-row *matRowDef="let row; columns: displayedColumns;">
+        <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="LoadTask(row)" style="cursor: pointer">
         </mat-row>
 
     </mat-table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
 <hr>
-<div class="row">
+<!--<div class="row">
     <div class="col-xs-12">
         <button class="btn btn-success" (click)="eventClicked()">Export To CSV</button>
+    </div>
+</div>-->
+
+<div class="row" *ngIf="isClicked">
+    <div class="col col-xs-12">
+        <div class="card mb-12">
+            <div class="card-header">
+                Selected Task Details
+            </div>
+            <div class="card-body">
+                <div [@routerTransition]>
+                    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+                </div>
+                <div>
+                    <table>
+
+                        <th style="padding: 20px">
+                            Update Date
+                        </th>
+                        <th style="padding: 20px">
+                            Update Description
+                        </th>
+                        <th style="padding: 20px">
+                            Updater
+                        </th>
+
+                        <tr *ngFor="let item of updatesarray">
+                            <td style="padding: 20px">
+                                {{item.date}}
+                            </td>
+                            <td style="padding: 20px">
+                                {{item.update}}
+                            </td>
+                            <td style="padding: 20px">
+                                {{item.updater}}
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
